# pybotterfly-dto-converter

./: .gitignore  .pre-commit-config.yaml  README.md  pyproject.toml
pybotterfly_converter/: BaseConverter.py  BaseDTOConverter.py  DTOConverter.py  __init__.py
pybotterfly_dto_converter/: BaseDTO.py  BaseDTOConverter.py  BaseDTODecoder.py  BaseDTOEncoder.py  DTOConverter.py  DTODecoder.py  DTOEncoder.py  __init__.py
tests/: test_decoder.py  test_encoder.py
