[tool.poetry]
name = "pybotterfly-dto-converter"
version = "0.1.1"
description = "DTO converter for PyBotterfly framework"
authors = ["Ninzalo <k-artemiy@mail.ru>"]
license = "MIT"
readme = "README.md"
packages = [{include = "pybotterfly_dto_converter"}]

[tool.poetry.dependencies]
python = "^3.11"

[tool.poetry.group.dev.dependencies]
pre-commit = "^3.8.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
